test/libsolidity/syntaxTests/nameAndTypeResolution/139_no_name_suggestion.sol
contract c {
    function g() public { fun(); }
}
// ----
// DeclarationError 7576: (39-42='fun'): Undeclared identifier.
